Fix code block misalignment

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -598,3 +598,9 @@ hr.slender {
   content: "\eac8";
 }
 /*-- End of Icomoon icon font section --*/
+
+/* My customisation */
+/* Correct formatting of code blocks */
+pre.highlight code {
+  padding-left: 0%
+}
